# amazon-sp-api-python

./: .flake8  .gitmodules  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: main-workflow.yaml  pull-request-workflow.yaml
notebooks/: api_test.ipynb
scripts/: generate_schemas.py
tests/: conftest.py  test_api.py
